# FinanceTechnologyProjects

./: .gitignore  CMakeLists.txt
CommonModules/: CMakeLists.txt  main.cpp
CommonModules/buffer/: Buffer.cpp  Buffer.hpp
CommonModules/consumers/: UnixDomainSocketConsumer.cpp  UnixDomainSocketConsumer.h
CommonModules/cryptography/: Certificates.cpp  Certificates.h
CommonModules/locking/: SpinLock.cpp  SpinLock.h
CommonModules/logging/: LowLatencyLogger.cpp  LowLatencyLogger.h  LowLatencyLoggerDebug.cpp  LowLatencyLoggerDebug.h
CommonModules/queues/: LockFreeQueue.cpp  LockFreeQueue.h
CommonModules/ring_buffer/: RingBuffer_SPSC.cpp  RingBuffer_SPSC.h
CommonModules/ring_buffer_ex/: RingBufferEx.cpp  RingBufferEx.h
CommonModules/ring_buffer_spsc_commit/: RingBuffer_SpSc_Commit.cpp  RingBuffer_SpSc_Commit.hpp
CommonModules/ring_buffer_spsc_commit_buffer/: RingBuffer_SpSc_Commit_Buffer.cpp  RingBuffer_SpSc_Commit_Buffer.hpp
CommonModules/ring_buffer_spsc_pricer/: RingBuffer_SpSc_Pricer.cpp  RingBuffer_SpSc_Pricer.hpp
CommonModules/ring_buffer_two/: RingBuffer_SPSC_Two.cpp  RingBuffer_SPSC_Two.hpp
DaVinchiTest/: CMakeLists.txt  DaVinchiTest.cpp  DaVinchiTest.h  DaVinchiTest_LinkedList.cpp  DaVinchiTest_LinkedList.h  main.cpp
ExchangeConnectors/: Binance.cpp  Binance.h  CMakeLists.txt  LIBS.txt  main.cpp
ExchangeConnectors/Binance/: ApiClient.cpp  ApiClient.h  BinanceWssStream.cpp  BinanceWssStream.h
ExchangeConnectors/binance/: ApiClient.cpp  Binance.hpp  IxWsBinanceConnectorSimple.cpp  WSConnectorAsynch.cpp  WSConnectorAsynch.h  WebSockerConnector.cpp  WebSockerConnector.h  WebSockerConnectorAsynch.cpp  WebSockerConnectorAsynch.h
ExchangeConnectors/experiments/: Experiments.hpp  MinimalSynchronousClient.cpp  WSConnectorAsynchExperimental.cpp  WSConnectorAsynchExperimental.h  WsBusAsynch.cpp
Experiments_HPC/: CMakeLists.txt  Prefetch_Unroll_Processing.cpp  Unroll_Data_Processing.cpp  includes.hpp  main.cpp
FixExperiments/: CMakeLists.txt  README.txt  acceptor_settings.conf  main.cpp
FixExperiments/client/: Application.cpp  Application.h  Client.cpp  Client.h  DebugApplication.cpp  DebugApplication.h
FixExperiments/config/: acceptor_settings.conf  client_settings.conf
FixExperiments/server/: Application.cpp  Application.h  Server.cpp  Server.h
MatchingEngine/: CMakeLists.txt  Includes.h  MatchingEngine.cpp  MatchingEngine.h  MatchingEngineEx.cpp  MatchingEngineWithAlloc.cpp  MatchingEngine_OrderAsPtr.cpp  MatchingEngine_OrderAsPtr_Alloc.cpp  MatchingEngine_PriceLvLPtr.cpp  MatchingEngine_Simple.cpp  Order.cpp  Order.h  main.cpp
MatchingEngineService/: CMakeLists.txt  Event.h  EventConsumer.cpp  EventConsumer.h  Order.h  OrderBook.cpp  OrderBook.h  main.cpp
MatchingEngineService/common/: Event.h  Order.cpp  Utils.h
MatchingEngineService/consumers/: EventConsumer.cpp  EventConsumer.h  EventConsumerUDS.cpp  EventConsumerUDS.h
MatchingEngineService/gateway/: Gateway.h  MarketDataGatewayUDP.h  MarketDataGatewayUDS.cpp  MarketDataGatewayUDS.h
MatchingEngineService/order_book/: OrderBook.cpp  OrderBook.h
MatchingEngineService/parser/: BinanceEventsParser.cpp  BinanceEventsParser.h  EventParser.h
MatchingEngineService/tests/: UnitTests.cpp
Parsers_JSON/: CMakeLists.txt  main.cpp
Parsers_JSON/binance/: BinanceDataParser.cpp  BinanceDataParser.h  MarketData.hpp  Parse_Experiments.cpp  Parse_SimdJson.cpp  Parsers.hpp
PricingEngine/: CMakeLists.txt  main.cpp
PricingEngine/debug_one/: PriceEngine.cpp  PriceEngine.hpp
PricingEngine/experiments/: Experiments.cpp  Experiments.hpp
PricingEngine/flat_level_map/: FlatLevelMap.cpp  FlatLevelMap.hpp
TradingSystem_Experimental/: CMakeLists.txt  main.cpp
TradingSystem_Experimental/common/: BaseServer.h  BaseService.h  Queue.h  Utils.cpp  Utils.h
TradingSystem_Experimental/connectors/: binance_connector_uds.py
TradingSystem_Experimental/gateway/: MarketDataGatewayUDP.cpp
TradingSystem_Experimental/gateway_experimental/: Gateway.h  MarketDataGatewayUDP.cpp  MarketDataGatewayUDP.h  MarketDataGatewayUDS.cpp  MarketDataGatewayUDS.h  UDSServer.cpp  UDSServer.h
TradingSystem_Experimental/modules/: BookBuilder.cpp  Modules.h
TradingSystem_Experimental/order_book/: Manager.cpp  Manager.h  OrderBook.cpp
TradingSystem_Experimental/servers/: UdsServerAsynch.cpp  UdsServerAsynch.h
TradingSystem_Experimental/service/: IService.cpp  IService.h
TradingSystem_Experimental/service_experiments/: Experiments.h  IService.h  Modular_Service_Final.cpp  Service_Callback_Tests.cpp  Service_Demo_One.cpp  Service_Demo_Two.cpp  Service_Implementation_Experiments.cpp
TradingSystem_Experimental/tests/: Buffer_Tests.cpp  Module_Impl_Test.cpp  Module_Impl_Test.h  Tests.h  UnitTests.cpp  UnitTests.h
TradingSystem_MVP/: CMakeLists.txt  Engine.cpp  Engine.h  TradingSystem-v1.0.txt  main.cpp
TradingSystem_MVP/common/: BlockingQueue.h  BlockingQueuePtr.h  Buffer.h  Event.h  Exchange.h  Types.h  Utilities.cpp  Utilities.h  Utils.cpp  Utils.h
TradingSystem_MVP/connectors/: BinanceConnector.cpp  BinanceConnector.h
TradingSystem_MVP/engine/: Engine.cpp  Engine.h  OrderBook.cpp  OrderBook.h  PriceLevelBook.cpp  PriceLevelBook.h
TradingSystem_MVP/market_data/: MarketData.cpp  MarketData.h  MarketDataTypes.h  Parser.cpp  Parser.h  Ticker.cpp  Ticker.h
TradingSystem_MVP_Ps1/: CMakeLists.txt  TradingSystem-v1.0.txt  main.cpp
TradingSystem_MVP_Ps1/common/: Common.hpp  FlatMap.hpp  MarketDepthBook.hpp  RingBuffer.hpp
TradingSystem_MVP_Ps1/connectors/: Connector.cpp
TradingSystem_MVP_Ps1/market_data/: MarketData.hpp  Parser.cpp  Parser.hpp
TradingSystem_MVP_Ps1/tests/: Tests.cpp  Tests.hpp
TradingSystem_MVP_Ps2/: CMakeLists.txt  README.txt  main.cpp
TradingSystem_MVP_Ps3/: CMakeLists.txt  main.cpp
Utilities/: Base64.cpp  Base64.hpp  CMakeLists.txt  DateTimeUtilities.cpp  DateTimeUtilities.hpp  FileUtilities.cpp  FileUtilities.hpp  FinalAction.hpp  HexConverter.cpp  HexConverter.hpp  PerfUtilities.cpp  PerfUtilities.hpp  StringUtilities.cpp  StringUtilities.hpp  Testing.cpp  Testing.hpp  main.cpp
(+115 files in other folders)
