cmake_minimum_required(VERSION 3.16 FATAL_ERROR)

project(Utilities)
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -pthread")
set(PROJECT_VERSION 1.0.0.0)
project(${PROJECT_NAME} VERSION ${PROJECT_VERSION} LANGUAGES CXX)

add_compile_options(-c -Wall -Wextra -O3 -std=c++2c)

add_library(utils
        Base64.cpp Base64.hpp
        FileUtilities.cpp FileUtilities.hpp
        StringUtilities.cpp StringUtilities.hpp
        HexConverter.cpp HexConverter.hpp
        PerfUtilities.cpp PerfUtilities.hpp
        FinalAction.hpp
)

# include all components
add_executable(${PROJECT_NAME}
        main.cpp
)

target_link_libraries(${PROJECT_NAME}
        utils
        pthread
        ${EXTRA_LIBS}
)